# FHE_libs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plots1.py  plots2.py  plots3.py  plots4.py  plots5.py  plots6.py
Lattigo_lib/: go.mod  multithread_lattigo_inner.go  tests_lattigo.go  tests_lattigo.txt
OpenFHE_lib/: CMakeLists.txt  inner_openFHE.cpp  inner_openFHE.h  mult_openFHE.cpp  mult_openFHE.h  multithread_openfhe_inner.cpp  test_inner.txt  tests_openFHE.cpp
SEAL_lib/: CMakeLists.txt  examples.h  inner_seal.cpp  inner_seal.h  mult_seal.cpp  mult_seal.h  multithread_seal_inner.cpp  multithread_seal_inner.txt  tests_seal.cpp
SEAL_lib/plots/: 2_13.py
